new ticket layoyt, now working on scrolling

--- a/index.html
+++ b/index.html
@@ -49,31 +49,31 @@
         </section>
 
         <section id="mainDiv2">
-            <div class="ingressoInfo">
+            <div class="ticket">
                 <h2>PISTA</h2>
                 <h3>R$ 50,00</h3> 
                 <p>Acesso à área principal do show.</p>
             </div>
-            <div class="ingressoInfo">
+            <div class="ticket">
                 <h2>OPEN-BAR</h2> 
                 <h3>R$ 100,00</h3>
                 <p>Acesso à área principal e bebidas liberadas.</p>
             </div>
 
-            <div class="ingressoInfo">
-                <h2>Ingresso Premium</h2>
+            <div class="ticket">
+                <h2>INGRESSO PREMIUM</h2>
                 <h3>R$ 120,00</h3>
                 <p>Acesso à área VIP com comodidades exclusivas.</p>
                 
             </div>
 
-            <div class="ingressoInfo">
+            <div class="ticket">
                 <h2>MEZANINO VIP</h2> 
                 <h3>R$ 150,00</h3>
                 <p>Vista privilegiada do palco e serviço de garçom.</p>
 
             </div>
-            <div class="ingressoInfo">
+            <div class="ticket">
                 <h2>PACOTE ROCK STAR</h2>
                 <h3>R$ 200,00</h3>
                 <p>Meet and greet com a banda, acesso exclusivo e brindes.</p>
